# wasm-cmake-vcpkg-template

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  CMakeLists.txt  README.md  vcpkg.json
src/c/: main.c
src/html/: index.html
templates/call_c_fn_in_js/: CMakeLists.txt
templates/call_c_fn_in_js/src/c/: main.c
templates/call_c_fn_in_js/src/html/: call_c_fn_in_js.html
templates/call_js_fn_in_c/: CMakeLists.txt
templates/call_js_fn_in_c/src/html/: call_js_fn_in_c.html
templates/main_loop/: CMakeLists.txt
templates/main_loop/src/c/: main.c
templates/main_loop/src/html/: main_loop.html
templates/main_run_once/: CMakeLists.txt
templates/main_run_once/src/html/: main_run_once.html
templates/memory/: CMakeLists.txt
templates/memory/src/html/: main_memory.html  memory.html
templates/memory_malloc/: CMakeLists.txt
templates/memory_malloc/src/html/: main_memory_malloc.html  memory_malloc.html
wasm_export_from_js/: CMakeLists.txt
wasm_export_from_js/src/c/: main.c
wasm_export_from_js/src/html/: main_export_from_js.html
wasm_library/: CMakeLists.txt
wasm_library/src/html/: main_library.html
wasm_main_loop/src/html/: main_loop.html
wasm_memory/src/c/: main.c
wasm_memory/src/html/: main_memory.html
wasm_memory_malloc/src/c/: main.c
wasm_memory_malloc/src/html/: main_memory_malloc.html
wasm_run_once/src/c/: main.c
wasm_run_once/src/html/: main_run_once.html
