set(target_name call_c_fn_in_js)

if(DEFINED EMSCRIPTEN)
  add_executable(${target_name} src/c/main.c)
  set(CMAKE_EXECUTABLE_SUFFIX ".js")
else()
  add_library(${target_name} SHARED src/c/main.c)
endif()

if(DEFINED EMSCRIPTEN)
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${target_name}.wasm DESTINATION ${CMAKE_SOURCE_DIR}/dist)
  install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/html/${target_name}.html DESTINATION ${CMAKE_SOURCE_DIR}/dist)
else()
  install(TARGETS ${target_name} DESTINATION ${CMAKE_SOURCE_DIR}/dist)
endif()

# if(DEFINED EMSCRIPTEN)
#   add_executable(${target_name} src/c/main.c)
#   set(CMAKE_EXECUTABLE_SUFFIX ".js")
#   set_target_properties(${target_name} PROPERTIES COMPILE_FLAGS "-s SIDE_MODULE=1 ")
#   set_target_properties(${target_name} PROPERTIES LINK_FLAGS "-s SIDE_MODULE=1 -s STANDALONE_WASM --no-entry ")
# else()
#   add_library(${target_name} SHARED src/c/main.c)
# endif()
#
# install(TARGETS ${target_name} DESTINATION ${CMAKE_SOURCE_DIR}/dist)
# if(DEFINED EMSCRIPTEN)
#   install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/html/${target_name}.html DESTINATION ${CMAKE_SOURCE_DIR}/dist)
# endif()
