set(target_name main_memory)

if(DEFINED EMSCRIPTEN)
  add_executable(${target_name} src/c/main.c)
  set(CMAKE_EXECUTABLE_SUFFIX ".js")
else()
  add_library(${target_name} SHARED src/c/main.c)
endif()

install(TARGETS ${target_name} DESTINATION ${CMAKE_SOURCE_DIR}/dist)
if(DEFINED EMSCRIPTEN)
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${target_name}.wasm DESTINATION ${CMAKE_SOURCE_DIR}/dist)
  install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/html/${target_name}.html DESTINATION ${CMAKE_SOURCE_DIR}/dist)
endif()
# if(DEFINED EMSCRIPTEN)
#   add_executable(${target_name} src/c/main.c)
#   set(CMAKE_EXECUTABLE_SUFFIX ".wasm")
#   set_target_properties(${target_name} PROPERTIES COMPILE_FLAGS "-s SIDE_MODULE=1 ")
#   set_target_properties(${target_name} PROPERTIES LINK_FLAGS "-s SIDE_MODULE=1 --no-entry")
# else()
#   add_library(${target_name} SHARED src/c/main.c)
# endif()
#
# install(TARGETS ${target_name} DESTINATION ${CMAKE_SOURCE_DIR}/dist)
# if(DEFINED EMSCRIPTEN)
#   install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/html/${target_name}.html DESTINATION ${CMAKE_SOURCE_DIR}/dist)
# endif()
